# mathisi

./: .gitattributes  .gitignore  README.md  compose.yaml  math.session.sql
.zed/: settings.json
client/: .prettierignore  app.json  babel.config.js  package-lock.json  package.json  pnpm-lock.yaml
client/app/: _layout.tsx  index.tsx
client/app/(auth)/: login.tsx  register.tsx
client/app/(tabs)/: _layout.tsx  bookmarks.tsx  explore.tsx  feed.tsx  index.tsx  new.tsx  profile.tsx
client/app/(tabs)/(bookmarks)/: index.tsx
client/app/(tabs)/(feed)/: index.tsx
client/app/(tabs)/(home)/: _layout.tsx  index.tsx
client/components/: TabBar.tsx  article-card.tsx  article-feed.tsx  log-in.tsx  note-composer.tsx  note_add.tsx  sheet-option.tsx  sign-in.tsx  simple-input.tsx  styled-action-sheet.tsx  user-profile.tsx
client/components/auth/: login-form.tsx  register-form.tsx
client/components/navigation/: paper-appbar-header.tsx
client/components/quiz/: flash-card.tsx  question-tab.tsx
client/components/ui/: collapsible.tsx
client/constants/: apiBaseUrl.ts
client/hooks/: use-new.tsx
client/lib/auth/: token.ts
client/lib/providers/: api.ts  auth.tsx  query.tsx
client/lib/sheets/: index.tsx  new.tsx
client/lib/state/: ai-note-draft.ts  ai-note-status-bridge.ts
client/reducer/: forcereload.tsx
client/types/: api.d.ts  article.ts  react-native-markdown-editor.d.ts
server/: Cargo.toml  config.toml
server/src/: entity.rs  errors.rs  init.rs  main.rs  settings.rs  state.rs
server/src/entity/: file.rs  note.rs  note_files.rs  note_tags.rs  question.rs  quiz.rs  save.rs  tag.rs  token.rs  upvote.rs  user.rs
server/src/middlewares/: auth.rs
server/src/routes/: api.rs
server/src/routes/api/: feed.rs  files.rs  login.rs  mod.rs  note.rs  notes.rs  register.rs  user.rs
server/src/routes/api/files/: id.rs  mod.rs
server/src/routes/api/notes/: ai.rs  id.rs  mod.rs  quiz.rs
server/src/routes/api/user/: id.rs  mod.rs
server/src/util/: tokens.rs
(+14 files in other folders)
