[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-valid = "0.24.0"
chrono = { version = "0.4.42", features = ["serde"] }
color-eyre = "0.6.4"
config = "0.15.11"
dashmap = "6.1.0"
dotenvy = "0.15.7"
strum = { version = "0.27.1", features = ["derive"] }
futures = "0.3.31"
http = "1.3.1"
http-serde-ext = "1.0.2"
rand = "0.9.2"
reqwest = { version = "0.12.15", features = [
    "rustls-tls",
    "http2",
    "charset",
], default-features = false }
rustls = { version = "0.23.31", features = ["aws-lc-rs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
tower = { version = "0.5.2", features = ["full", "tokio", "log"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
visible = "0.0.1"
sea-orm = { version = "2.0.0-rc.18", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-chrono", "with-json", "with-uuid", "schema-sync", "entity-registry"] }
serde_with = "3.15.1"
rust_decimal = "1.39.0"
thiserror = "2.0.17"
miette = "7.6.0"
tonic = { version = "0.14.2", features = ["tls-aws-lc"] }
argon2 = "0.5.3"
password-hash = "0.5.0"
async-openai = "0.30.1"
infer = "0.19.0"
sanitize-filename = "0.6.0"
